<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:textSize="@dimen/size18sp"
                android:id="@+id/login_email_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:textSize="@dimen/size18sp"
                android:id="@+id/login_password_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/size18sp"
            android:text="@string/log_in"
            android:textColor="@color/branco"
            android:background="@color/vermelhoClaro"
            android:layout_marginTop="@dimen/size60dp"
            android:enabled="true"
            android:padding="@dimen/size10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/size18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size50dp"
            />

        <Button
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/size18sp"
            android:text="@string/register"
            android:textColor="@color/branco"
            android:background="@color/CinzaClarinho"
            android:layout_marginTop="@dimen/size100dp"
            android:enabled="true"
            android:padding="@dimen/size10dp"
            />


    </LinearLayout>

</LinearLayout>