<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/size10dp"
    android:layout_marginVertical="@dimen/size5dp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/size10dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginLeft="@dimen/size8dp"
    android:layout_marginRight="@dimen/size8dp"
    android:layout_marginTop="@dimen/size8dp"
    android:layout_marginBottom="@dimen/size8dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/item_imagem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size200dp"
            android:src="@drawable/iv_tonyroma"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/item_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size20sp"
            android:textColor="@color/pretoClaro"
            android:layout_marginStart="@dimen/size16dp"
            android:layout_marginRight="@dimen/size16dp"
            android:text="@string/titulo_do_anuncio"
            android:textStyle="bold"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/item_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size16sp"
            android:textColor="@color/cinzaEscuro"
            android:layout_marginLeft="@dimen/size16dp"
            android:text="@string/endere_o_que_esta_servindo_o_anuncio"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/item_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size16sp"
            android:textColor="@color/cinzaEscuro"
            android:layout_marginStart="@dimen/size16dp"
            android:text="@string/horario_de_atendimento"
            android:textAllCaps="false"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>

