<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:textSize="@dimen/size18sp"
                android:id="@+id/register_name_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:id="@+id/register_email_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:textSize="@dimen/size18sp"
                android:id="@+id/register_password_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/cinzaClaro"
            android:layout_marginTop="@dimen/size10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:textColor="@color/AzulEscuro"
                android:textSize="@dimen/size18sp"
                android:id="@+id/register_password_repeat_edit"
                android:textAllCaps="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/size16sp"
            android:text="@string/register"
            android:textColor="@color/branco"
            android:background="@color/vermelhoClaro"
            android:padding="@dimen/size8dp"
            android:enabled="true"
            />


    </LinearLayout>

</LinearLayout>